# gryde

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
.github/workflows/: build-release.yml  continuous-integration.yml
gryde/: CMakeLists.txt  Config.cmake.in
gryde/include/gryde/: Matrix.hpp
gryde/src/: CMakeLists.txt  Private.cpp  Private.hpp  Public.cpp
tests/: CMakeLists.txt  addition.cpp  cell_accessor.cpp  comparison.cpp  constexpr.cpp  constructors.cpp  contents.cpp  contents_accessor.cpp  determinant.cpp  example.cpp  msvc_buggy_constexpr.cpp  submatrix.cpp
